# oss-downloader

./: .env_sample  .gitignore  README.md  pyproject.toml
oss_downloader/: db_helper.py  main.py  oss_download_manager.py  oss_downloader.py
